--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "nyholm/psr7": "^1.3",
+        "symfony/psr-http-message-bridge": "^2.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
